[gd_scene load_steps=8 format=3 uid="uid://hpx1s0l0kxve"]

[ext_resource type="Script" path="res://src/visitors/visitor.gd" id="1_7cc7u"]
[ext_resource type="Texture2D" uid="uid://fcdt6cc086nh" path="res://assets/Visitors/speech_bubble.png" id="6_3j6pk"]
[ext_resource type="PackedScene" uid="uid://i58uq73wyw2g" path="res://src/option_aware_audio_player.tscn" id="9_k8pmv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5hui3"]
radius = 14.9868
height = 59.4497

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tddpl"]
radius = 17.0
height = 74.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rcl1j"]
radius = 23.0
height = 68.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cb84g"]
height = 34.0

[node name="Visitor" type="Area2D"]
script = ExtResource("1_7cc7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, -14)
rotation = 0.855106
shape = SubResource("CapsuleShape2D_5hui3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(40, -50)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tddpl")

[node name="HoldPoint" type="Node2D" parent="."]
position = Vector2(0, -3)

[node name="SpeechBubbleSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(39, -45)
texture = ExtResource("6_3j6pk")

[node name="DesireIconHolder" type="HBoxContainer" parent="SpeechBubbleSprite"]
offset_left = -24.0
offset_top = -5.0
offset_right = 32.0
offset_bottom = 16.0
alignment = 1

[node name="AcceptanceArea" type="Area2D" parent="."]
position = Vector2(8, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AcceptanceArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rcl1j")

[node name="Collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2(5, -20)
rotation = 1.57362
shape = SubResource("CapsuleShape2D_cb84g")
disabled = true

[node name="OptionAwareAudioPlayer" parent="." instance=ExtResource("9_k8pmv")]
db_offset = -5

[node name="SongPlayers" type="Node2D" parent="."]
